teamcity-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamcity-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamcity-server
  template:
    metadata:
      labels:
        app: teamcity-server
    spec:
      containers:
        - name: teamcity-server
          image: jetbrains/teamcity-server
          ports:
            - containerPort: 8111
          volumeMounts:
            - name: teamcity-data
              mountPath: /data/teamcity_server/datadir
            - name: teamcity-logs
              mountPath: /opt/teamcity/logs
      volumes:
        - name: teamcity-data
          persistentVolumeClaim:
            claimName: teamcity-server-pvc
        - name: teamcity-logs
          persistentVolumeClaim:
            claimName: teamcity-server-logs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: teamcity-server
spec:
  selector:
    app: teamcity-server
  ports:
    - protocol: TCP
      port: 8111
      targetPort: 8111
      nodePort: 30111
  type: NodePort
