win2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: windows-pod
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
  replicas: 1
  selector:
    matchLabels:
      app: windows-pod
  template:
    metadata:
      labels:
        app: windows-pod
    spec:
      containers:
        - env:
          - name: VERSION
            value: "win10"
          - name: RAM_SIZE
            value: "6G"
          - name: CPU_CORES
            value: "4"          
          - name: KVM
            value: "N"

          name: windows
          image: dockurr/windows
          ports:
            - containerPort: 8006
              protocol: TCP
            - containerPort: 3389
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
            windowsOptions:
              hostProcess: false
              runAsUserName: "ContainerAdministrator"
          resources:
            limits:
              cpu: "4500m"
              memory: "8Gi"
            requests:
              cpu: "10m"
              memory: "2Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: windows-service
spec:
  type: NodePort
  selector:
    app: windows-pod
  ports:
    - name: tcp-8006
      protocol: TCP
      port: 8006
      targetPort: 8006
    - name: tcp-3389
      protocol: TCP
      port: 3389
      targetPort: 3389

# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: windows-virtual-service
# spec:
#   hosts:
#   - "wintools.dynamic1001.com"
#   gateways:
#   - windows-gateway
#   http:
#   - route:
#     - destination:
#         host: windows-service.default.svc.cluster.local
#         port:
#           number: 8006  # Fixed port mismatch
