windows-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-win-pod
  labels:
    app: app-win
spec:
  containers:
    - name: windows
      image: dockurr/windows
      ports:
        - containerPort: 8006
        - containerPort: 3389
        - containerPort: 3389
          protocol: UDP
      resources:
        limits:
          cpu: 3000m
          memory: 10Gi
        requests:
          cpu: 10m
          memory: 2Mi
      securityContext:
        privileged: true
  terminationGracePeriodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  name: app-win-service
spec:
  selector:
    app: app-win
  ports:
    - name: tcp-8006
      protocol: TCP
      port: 8006
      targetPort: 8006
      nodePort: 31212
    - name: tcp-3389
      protocol: TCP
      port: 3389
      targetPort: 3389
      nodePort: 31213
    - name: udp-3389
      protocol: UDP
      port: 3389
      targetPort: 3389
      nodePort: 31214
  type: NodePort
